--- a/index.html
+++ b/index.html
@@ -8,26 +8,27 @@
   <title>Russian travel</title>
 </head>
 <body class="body">
-   <header class="header body__container">
-      <logo class="header__logo">
-        <img src="images/__logo (1).svg">
-      </logo>
-      <div class="header__links">
-        <a class="header__lang-link_active" href="#" targer="blank">Ru</a>
-        <a class="header__lang-link" href="#" targer="blank">En</a>
-      </div>
-    </header>
-    <main class="content body__container">
-      <section class="lead body__container">
-        <h1 class="lead__title">Путешествия по России</h1>
-        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-        <img class="lead__image" alt="Купе поезда" src="images/__image-kalegin-michail-179870-unsplash.png">
-        <p class="lead__caption">ваша полка — верхняя</p>
-      </section>
-      <article class="intro__wrapper body__container">
-        <div class="intro">
-          <h2 class="intro__title">Чего мы там не видели?</h2>
-        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.</p>
+  <header class="header body__container">
+    <logo class="header__logo">
+      <img src="images/__logo (1).svg">
+    </logo>
+    <div class="header__links">
+      <a class="header__lang-link_active" href="#" targer="blank">Ru</a>
+      <a class="header__lang-link" href="#" targer="blank">En</a>
+    </div>
+  </header>
+  <main class="content body__container">
+    <section class="lead body__container">
+      <h1 class="lead__title">Путешествия по России</h1>
+      <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
+      <img class="lead__image" alt="Купе поезда" src="images/__image-kalegin-michail-179870-unsplash.png">
+      <p class="lead__caption">ваша полка — верхняя</p>
+    </section>
+    <article class="intro__wrapper body__container">
+      <div class="intro">
+        <h2 class="intro__title">Чего мы там не видели?</h2>
+        <p class="intro__text">По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга, густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая взяла в охапку троих детей, усадила их в свою «Ладу» и проехала 20 тысяч километров по родной стране. Мы выбрали и описали некоторые интересные места, достойные вашего отпуска.
+        </p>
         <ul class="intro__list">
           <li>Часовых поясов <span class="intro__span-accent">11</span></li>
           <li>Объектов природного наследия ЮНЕСКО <span class="intro__span-accent">12</span></li>
@@ -35,7 +36,7 @@
           <li>Природных заповедников <span class="intro__span-accent">105</span></li>
           <li>Аэропортов <span class="intro__span-accent">241</span></li>
         </ul>
-        </div>
+      </div>
       </article>
       <section class="photo-grid body__container">
         <img class="photo-grid__item" src="images/__item.png" alt="">
@@ -136,6 +137,5 @@
       </nav>
       <p class="footer__copyright">&copy; 2021. Вероника Малышкова</p>
     </footer>
-  </div>
 </body>
 </html>
