--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <img src="images/__logo (1).svg" alt="Логотип с картой России">
     </logo>
     <div class="header__links">
-      <a class="header__lang-link header__lang-link_active" href="#" targer="_blank">Ru</a>
+      <a class="header__lang-link header__lang-link_active" href="#" target="_blank">Ru</a>
       <a class="header__lang-link" href="#" target="_blank">En</a>
     </div>
   </header>
