--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
   <header class="header">
     <img class="header__logo" src="images/__logo(1).svg" alt="Логотип с картой России">
     <ul class="header__lang-links">
-      <li class="header__li">
+      <li>
         <a class="header__lang-link header__lang-link_active" href="#" target="_blank">Ru</a>
       </li>
-      <li class="header__li"><a class="header__lang-link" href="#" target="_blank">En</a></li>
+      <li>
+        <a class="header__lang-link" href="#" target="_blank">En</a></li>
     </ul>
   </header>
   <main class="content">
